roles/nginx-test/files/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-test
  name: nginx-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  selector:
    app: nginx-test
