roles/nginx-test/files/nginx-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: nginx-ingress
  namespace: default
spec:
  entryPoints: 
    - web
  routes:
  - match: Host('nginx-test.local.lan') 
    kind: Rule
    services:
    - name: nginx-test
      port: 80
